# adi-ml-toolkit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/ml_hackathon_toolkit/: __init__.py  cli.py
