[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adi-ml-toolkit"
version = "0.2.6"
description = "A handy metapackage installing common ML/AI libraries and tools I use for hackathons."
readme = "README.md"
authors = [
    { name = "Aditya", email = "adityashirsatrao007@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Core Data Science
    "numpy",
    "pandas",
    "scipy",
    "pyyaml",
    
    # Machine Learning Core
    "scikit-learn",
    "xgboost",
    "lightgbm",
    "catboost",
    
    # Deep Learning Frameworks
    "torch",
    "torchvision",
    "torchaudio",
    "pytorch-lightning",
    "fastai",
    "tensorflow",
    "tensorflow-decision-forests",
    "keras",
    "jax[cpu]",
    
    # NLP & HuggingFace Ecosystem
    "transformers",
    "datasets",
    "accelerate",
    "huggingface-hub",
    "sentence-transformers",
    "spacy",
    "nltk",
    "gensim",
    
    # Vector DBs & Generative AI APIs
    "langchain",
    "langchain-openai",
    "langgraph",
    "openai",
    "anthropic",
    "google-generativeai",
    "chromadb",
    "pinecone-client",
    "qdrant-client",
    "tiktoken",
    "llama-index",
    "crewai",
    "autogen-agentchat",
    "pyautogen",
    "semantic-kernel",
    
    # Computer Vision & Medical
    "opencv-python-headless",
    "pillow",
    "scikit-image",
    "monai",
    
    # Time Series & Audio
    "librosa",
    "statsmodels",
    "prophet",
    
    # Visualization
    "matplotlib",
    "seaborn",
    "plotly",
    
    # Jupyter & Notebooks
    "jupyterlab",
    "notebook",
    "ipywidgets",
    
    # MLOps, AutoML & Experiment Tracking
    "mlflow",
    "wandb",
    "optuna",
    "pycaret",
    "autogluon",
    
    # Web Apps & APIs
    "fastapi",
    "uvicorn",
    "flask",
    "streamlit",
    "gradio",
    "pydantic",
    "python-multipart",
    
    # Utilities, Scraping, DBs
    "requests",
    "beautifulsoup4",
    "python-dotenv",
    "sqlalchemy",
    "pymongo",
    "redis",
    "celery",
]

[project.urls]
Homepage = "https://github.com/adityashirsatrao007/adi-ml-toolkit"
Repository = "https://github.com/adityashirsatrao007/adi-ml-toolkit.git"

[project.scripts]
ml-setup-clis = "adi_ml_toolkit.cli:main"
